# anoncreds-v2-rs

./: .gitignore  API.md  Cargo.toml  MAINTAINERS.md  Makefile  NOTICE.md  README.md  build.rs
.github/: dependabot.yml  settings.yml
.github/workflows/: build.yml  security-audit.yml  windows.yml
generate-tests-from-json/: Cargo.toml
generate-tests-from-json/src/: lib.rs
samples/credentials/: anoncreds_credential.json  w3c_credential.json
samples/presentations/: anoncreds_output.json  anoncreds_presentation_list.json  w3c_presentation.json
server/: Cargo.toml  Makefile  README.org
server/example-client/: Makefile-openapi
server/example-client/java/: .gitignore  .project  Makefile  README.org  pom.xml
server/example-client/typescript/: .gitignore  Makefile  Makefile-openapi  README.org  package.json  package.json-for-generated-code  pnpm-lock.yaml  tsconfig.json
server/example-client/typescript/src/: cli.ts  index.ts
server/src/: main.rs  misc.rs  query_param_guards.rs
src/: blind.rs  claim.rs  credential.rs  error.rs  issuer.rs  knox.rs  lib.rs  presentation.rs  revocation_registry.rs  statement.rs  uint.rs  utils.rs  verifier.rs
src/blind/: bundle.rs  credential.rs  request.rs
src/claim/: data.rs  enumeration.rs  hashed.rs  number.rs  revocation.rs  scalar.rs  type.rs  validator.rs
src/credential/: bundle.rs  membership.rs  offer.rs  schema.rs
src/knox/: accumulator.rs  bbs.rs  ecc_group.rs  ps.rs  short_group_sig_core.rs
src/knox/accumulator/: vb20.rs
src/knox/accumulator/vb20/: accumulator.rs  error.rs  key.rs  proof.rs  witness.rs
src/knox/bbs/: blind_signature.rs  blind_signature_context.rs  issuer.rs  msg_gens.rs  pok_signature.rs  pok_signature_proof.rs  prover.rs  public_key.rs  scheme.rs  secret_key.rs  signature.rs  verifier.rs
src/knox/ps/: blind_signature.rs  blind_signature_context.rs  issuer.rs  pok_signature.rs  pok_signature_proof.rs  prover.rs  public_key.rs  scheme.rs  secret_key.rs  signature.rs  verifier.rs
src/knox/short_group_sig_core/: hidden_message.rs  proof_committed_builder.rs  proof_message.rs  short_group_traits.rs
src/mapping/: map_credential.rs  map_presentation.rs
src/presentation/: accumulator_set_membership.rs  commitment.rs  create.rs  credential.rs  equality.rs  membership.rs  proof.rs  range.rs  revocation.rs  schema.rs  signature.rs  verifiable_encryption.rs  verifiable_encryption_decryption.rs  verify.rs
src/statement/: accumulator_set_membership.rs  commitment.rs  equality.rs  membership.rs  ps.rs  range.rs  revocation.rs  signature.rs  type.rs  verifiable_encryption.rs  verifiable_encryption_decryption.rs
src/vcp/: README.md  README.md-e  README.org  README.txt  api.rs  api_utils.rs  mod.rs
src/vcp/impl/: catch_unwind_util.rs  mod.rs  to_from.rs  to_from_api.rs  util.rs
src/vcp/impl/ac2c/: accumulator.rs  impl_ac2c.rs  mod.rs  presentation_request_setup.rs  proof.rs  signer.rs  to_from_api.rs
src/vcp/impl/common/: mod.rs  to_from_api.rs  types.rs  util.rs
src/vcp/impl/general/: mod.rs  presentation_request_setup.rs  proof.rs  signer.rs
src/vcp/impl/json/: mod.rs  shared_params.rs  util.rs
src/vcp/interfaces/: crypto_interface.rs  mod.rs  non_primitives.rs  primitives.rs  types.rs
src/vcp/interfaces/primitives/: types.rs
src/vcp/zkp_backends/: mod.rs
src/vcp/zkp_backends/ac2c/: accumulators.rs  authority.rs  crypto_interface.rs  crypto_interface_ac2c.rs  mod.rs  presentation_request_setup.rs  proof.rs  range_proof.rs  signer.rs
src/vcp/zkp_backends/dnc/: accumulators.rs  authority.rs  crypto_interface.rs  crypto_interface_dnc.rs  generate_frs.rs  in_memory_state.rs  mod.rs  proof.rs  range_proof.rs  signer.rs  types.rs
src/verifier/: accumulator_set_membership.rs  commitment.rs  equality.rs  membership.rs  range.rs  revocation.rs  signature.rs  verifiable_encryption.rs  verifiable_encryption_decryption.rs
tests/: equality-and-reveal.rs  flow.rs  out-of-range-panic.rs  range.rs  real-id.rs  revocation.rs  vcp-test.rs
tests/util/: mod.rs
tests/vcp/: api_test.rs  data_for_tests.rs  json_test_runner_ac2c.rs  json_test_runner_dnc.rs  mod.rs  range_proof_serialization_test.rs  serialization_test.rs  test_utils.rs
tests/vcp/impl/: catch_unwind_test.rs  mod.rs  to_from_test.rs  util_test.rs
tests/vcp/impl/ac2c/: accumulator_test.rs  direct.rs  mod.rs
tests/vcp/impl/common/: catch_unwind_test.rs
tests/vcp/impl/general/: mod.rs  presentation_request_setup_spec.rs  presentation_request_setup_test.rs  testing_framework_spec.rs  utility_function_types.rs  utility_functions.rs
tests/vcp/impl/zkp_backends/: mod.rs
tests/vcp/test_framework/: mod.rs  steps.rs  types.rs  utility_functions.rs  utils.rs
tests/vcp/test_framework/tests/: framework_tests.rs  mod.rs  run_json_tests_ac2c.rs  run_json_tests_dnc.rs
tests/vcp/zkp_backends/ac2c/: accumulator_test.rs  json_test_runner_ac2c.rs  mod.rs  run_json_test_framework_tests.rs  run_json_test_framework_tests_ac2c.rs  to_from_test.rs  (+5 more)
tests/vcp/zkp_functionality_tests/: accumulator_test.rs  mod.rs  run_json_tests_ac2c.rs  run_json_tests_dnc.rs  test_ac2c.rs  test_definitions.rs
(+169 files in other folders)
