[package]
authors = ["Hyperledger AnonCreds Developers"]
categories = ["cryptography"]
description = "Anonymous Credentials 2.0 implemention"
documentation = "https://docs.rs/anoncreds-v2-rs"
edition = "2021"
exclude = ["samples/**"]
homepage = "https://crates.io/crates/anoncreds-v2-rs"
license = "Apache-2.0"
name = "credx"
repository = "https://github.com/hyperledger/anoncreds-v2-rs"
version = "0.2.1"

[build-dependencies]
walkdir = "2"

# NOTE: Please keep dependencies sorted alphabetically.
[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
blsful = "3.0.0-pre8"
bulletproofs = { version = "4.0.0", package = "bulletproofs-bls" }
chrono = "0.4"
elliptic-curve = { version = "0.13", features = ["hash2curve"] }
elliptic-curve-tools = "0.1"
hex = "0.4"
indexmap = "2"
lazy_static = "1.4.0"
log = "0.4"
merlin = "3"
maplit = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = "1.10"
regex = "1"
rmp-serde = "1.3"
serde = { version = "1", features = ["serde_derive"] }
serde_bare = "0.5"
serde_cbor = "0.11"
serde_json = "1"
serde_regex = "1"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2.6"
uint-zigzag = { version = "0.2", features = ["std"] }
uuid = {version = "1.11", features = ["v4"]}
zeroize = "1"

# VCP specific dependencies
# ----- docknetwork crypto
bbs_plus = "0.24.0"
legogroth16 = "0.17.0"
proof_system = "0.33.0"
saver = "0.20.0"
vb_accumulator = "0.28.0"
# ----- needed for VCP usage of docknetwork crypto
ark-bls12-381 = "0.4.0"
ark-ec = { version = "^0.4.1", default-features = false }
ark-ff = { version = "^0.4.1", default-features = false }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false}
blake2 = { version = "0.10", default-features = false }
# ----- needed for flexible macros
paste = "1.0"
# ----- to generate tests
generate-tests-from-json = { path = "generate-tests-from-json" }
# ----- for REST API
schemars = "0.8.21"

[workspace]
members = [
        "server",
]

[dev-dependencies]
lazy_static = "1.5.0"
maplit = "1"
sha2 = "0.10"
env_logger = "0.11"

[features]
verbose = []
ignore_slow = []
ignore_slow_slow = []
in_memory_state = []
